fixed position of search box disabled search box form submit broke libs.js up into files, put them into appropriate folders (models, views, collections) better alignment of more info button decided to go with the pubdate string provided by the feed, instead of formatting, since it contains the localized time too

--- a/css/application.css
+++ b/css/application.css
@@ -38,6 +38,9 @@
 	width:100%;
 	height:200px;
 }
-.thumbnail_item {
-	/*max-height: 400px;*/
+.more_info {
+	padding: 0;
+}
+.search_form {
+	margin-top: 9px;
 }
